--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,19 @@
 * This file contains the CSS for index.html
 */
 
-
 h2 {
   color: #ff1a1a;
   font: 60pt "Times New Roman", Times, serif;
   font-weight: bold;
   line-height: 20pt;
-  padding: 5px
+  padding: 5px;
 }
 
 p {
   color: #986a06;
   font-family: "Times New Roman", Times, serif;
   font-size: 1.5rem;
-  padding: 5px
-  
+  padding: 5px; 
 }
 
 h3 {
